# ak_lab2

./: CMakeLists.txt  Makefile  Makefile-1  README.md  build.ninja  output  rules.ninja
src/: Calculator.cpp  Calculator.h  main.cpp  main.cpp~  smallCalculator.cpp~
